--- a/README.org
+++ b/README.org
@@ -1,3 +1,9 @@
 * .emacs.d
 
 This is the Emacs configurations I use.
+
+** Usage
+
+put this into your .emacs file:
+
+: (load-file "~/.emacs.d/init.el")
